# cougars-ros2

./: .gitignore  .gitmodules  README.md  acoustics_on.py  acoustics_on.sh  agent.sh  calibrate.sh  init.sh  init_factor_graph.sh  launch.sh  moos_start.sh  msg_sync.sh  record.sh  reload_params.sh  reset_eth.sh  start.sh  static_transforms.sh  sync.sh  test.sh  update_yaml.py
cougars_bringup/: CMakeLists.txt  package.xml
cougars_bringup/scripts/: startup_call.py
cougars_bringup/src/: bag_recorder.cpp
cougars_coms/: CMakeLists.txt  package.xml  rosdoc2.yaml
cougars_coms/include/cougars_coms/: coms_protocol.hpp
cougars_coms/rf_bridge/: rf_bridge.py
cougars_coms/src/: cougars_coms.cpp  vehicle_pinger.cpp
cougars_control/: package.xml
cougars_control/launch/: bluerov_launch.py  moos_launch.py  waypoint_launch.py
cougars_control/scripts/: fins_manual.py  manual_mission.py
cougars_control/src/: actuator.cpp  coug_controls.cpp  emergency_protocols.cpp  pid.cpp  waypoint_follower.cpp
cougars_control/waypoint_missions/: cb_large_test_mission.yaml  mission_plan_mission.yaml  provo_marina_mission.yaml
cougars_localization/: CMakeLists.txt
cougars_localization/launch/: sensors_launch.py
cougars_localization/scripts/: dvl_manager.py  factor_plot.py  gps_odom.py
cougars_localization/src/: depth_convertor.cpp  dvl_convertor.cpp  dvl_global.cpp  seatrac_ahrs_convertor.cpp  static_tf_publisher.cpp
src/cougars_coms/: CMakeLists.txt  README.md  package.xml  setup.py
src/cougars_coms/docs/: build_docs.sh
src/cougars_coms/include/cougars_coms/: coms_protocol.hpp  seatrac_enums.hpp
src/cougars_coms/launch/: radio_launch.py
src/cougars_coms/radio_node/: radio_node.py
src/cougars_coms/rf_bridge/: rf_bridge.py
src/cougars_coms/scripts/: radio_node.py
src/cougars_coms/src/: cougars_coms.cpp  modem_pinger.cpp  radio_node.py  vehicle_pinger  vehicle_pinger.cpp
src/cougars_control/: CMakeLists.txt  Doxyfile  package.xml  rosdoc2.yaml
src/cougars_control/cougars_control/: manual_mission.py
src/cougars_control/docs/: build.sh  generate.sh
src/cougars_control/docs/cross_reference/cougars_control/: cougars_control.tag
src/cougars_control/include/cougars_control/: pid.h
src/cougars_control/launch/: bluerov_launch.py  demo_launch.py  factor_bag_launch.py  factor_launch.py  manual_launch.py  manual_launch_sim.py  moos_gps_launch.py  moos_launch.py  moos_sim_gps_launch.py  moos_sim_launch.py  sim_launch.py  waypoint_launch.py
src/cougars_control/scripts/: battery_sub.py  dummy_factor_starter.py  fins_manual.py  leak_sub.py  manual_control.py  manual_mission.py  task_manager.py
src/cougars_control/src/: coug_controls.cpp  coug_demo.cpp  coug_kinematics.cpp  emergency_protocols.cpp  mc_serial_node.cpp  moos_bridge.cpp  moos_bridge_gps.cpp  moos_bridge_sim.cpp  pid.cpp  pid_int2.cpp  waypoint_converter.cpp  waypoint_follower.cpp  waypoint_follower_gps.cpp
src/cougars_cpp/: CMakeLists.txt  package.xml
src/cougars_cpp/include/cougars_cpp/: pid.h
src/cougars_cpp/src/: .moos_bridge.cpp.swp  coug_controls.cpp  coug_kinematics.cpp  demo_control.cpp  depth_convertor.cpp  dvl_config_listener.cpp  dvl_convertor.cpp  dvl_sender.cpp  factor_graph.cpp  fin_control.cpp  low_control.cpp  moos_bridge.cpp  pid.cpp  pid_control.cpp  seatrac_ahrs_convertor.cpp  vehicle_status.cpp
src/cougars_localization/: CMakeLists.txt  package.xml  rosdoc2.yaml
src/cougars_localization/docs/: build.sh  generate.sh
src/cougars_localization/launch/: converters_launch.py  demo_launch.py  factor_launch.py  gps_odom_launch.py  sensors_launch.py
src/cougars_localization/scripts/: dvl_manager.py  error_functions.py  factor_class_plot.py  factor_graph.py  factor_graph_imu.py  gps_odom.py  kalliyan_plotter.py  new_factor_graph.py  nmea_constructor.py  pressure_pub.py  time_sync_fixed.py
src/cougars_localization/src/: depth_convertor.cpp  dvl_convertor.cpp  dvl_global.cpp  seatrac_ahrs_convertor.cpp  static_tf_publisher.cpp  tf_static_publisher.cpp  vehicle_status.cpp
src/cougars_waypoint/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/cougars_waypoint/config/: mapviz_plotter_params.mvc
src/cougars_waypoint/cougars_waypoint/: map_point_converter_node.py
src/cougars_waypoint/launch/: waypoint_plotter.launch.py
src/dvl-a50/: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
src/dvl-a50/include/dvl_a50/: dvl-sensor.hpp  lifecycle_dvl_component.hpp  tcpsocket.hpp
src/dvl-a50/launch/: dvl_a50.launch.py  dvl_composition.launch.py
src/dvl-a50/scripts/: dvl_a50.py
src/dvl-a50/src/: dvl-sensor.cpp  lifecycle_dvl_component.cpp
src/dvl-a50/tests/: README.md
src/dvl-a50/tests/dvl_serial/: dvl_protocol.c  dvl_protocol.h  main.c  makefile  serial.c  serial.h
src/gps_msgs/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  ros1_ros2_mapping.yaml
src/gps_msgs/msg/: GPSFix.msg  GPSStatus.msg
src/gps_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/gps_tools/gps_tools/: gps_message_converter.py
src/gps_tools/include/gps_tools/: conversions.h
src/gps_tools/nodes/: fix_translator
src/gps_tools/scripts/: bag_converter
src/gps_tools/src/: utm_odometry_component.cpp  utm_odometry_to_navsatfix_component.cpp
src/gps_umd/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/gpsd_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/gpsd_client/config/: gpsd_client.yaml
src/gpsd_client/launch/: gps_imu_launch.py  gpsd_client-launch.py  navsat_launch.py
src/gpsd_client/src/: client.cpp
src/matek/: CMakeLists.txt  package.xml
src/seatrac/: CMakeLists.txt  package.xml
src/seatrac/docs/: build.sh
src/seatrac/docs/docs_output/seatrac/: .buildinfo  (+6 more)
src/seatrac/src/: calibrate_modem.cpp  modem_commands.hpp  modem_pinger.cpp  modem_pub.cpp  modem_ros_node.cpp  seatrac_beacon_setup_tool.cpp  seatrac_calibration_and_settings.cpp
src/seatrac_interfaces/: CMakeLists.txt  package.xml  rosdoc2.yaml
src/seatrac_interfaces/docs/: build.sh  build_docs.sh
src/seatrac_interfaces/msg/: ModemCmdUpdate.msg  ModemRec.msg  ModemSend.msg
(+400 files in other folders)
