<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cougars_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="frostlab@todo.todo">frostlab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>std_msgs</depend>
  <depend>dvl_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cougars_interfaces</depend>
  <depend>seatrac_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
