<?xml version="1.0"?>
<package format="3">
  <name>gps_msgs</name>
  <version>2.0.4</version>
  <description>GPS messages for use in GPS drivers</description>

  <author>P. J. Reed</author>
  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gps_common</url>
  <url type="repository">https://github.com/swri-robotics/gms_umd</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="ros1_ros2_mapping.yaml"/>
  </export>
</package>
